# libMaths

./: CMakeLists.txt
CMake/: CMakeLists_sources.cmake
_scripts/: generate_cmake_sources.sh
source/: Interpolation.cpp  Interpolation.h  Random.cpp  Random.h  Test.cpp  Test.h
source/Algorithm/: CORDIC.h  CORDIC_0.cpp  CORDIC_9.cpp  CORDIC_r.cpp
source/Core/: Angle.cpp  Angle.h  AngleDefine.h  CMath.cpp  CMath.h
source/Matrix/: Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h
source/Quaternion/: Quaternion.cpp  Quaternion.h
source/Vector/: TVector2.h  Vector.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
